#include <PID_v1.h>

#include <OneWire.h>


#define pbufUDP_PORT 8889
#define jsonUDP_PORT 8890
#define ONEWIRE_PIN1 CONTROLLINO_D9
#define ONEWIRE_PIN2 CONTROLLINO_D10
#define ONEWIRE_PIN3 CONTROLLINO_D11

#define COMPRESSOR_PIN CONTROLLINO_R0
#define GROUNDPUMP_PIN CONTROLLINO_R5
#define GROUNDTANK_PIN CONTROLLINO_D8
#define PIN_SHUNT_OFFICE CONTROLLINO_D0
#define PIN_SHUNT_VERANDA CONTROLLINO_D1


IPAddress mcast(239, 0, 0, 20); // Multicast address
IPAddress bcast(255, 255, 255, 255); // Multicast address

double temp_main = READ_ERROR_VALUE;           //last temperature
double temp_backup = READ_ERROR_VALUE;           //last temperature
boolean compressorPowerOn = false;
boolean groundPumpPowerOn = false;
boolean groundTankOn = false;

//EthernetUDP jsonUdp;
EthernetUDP pbufUdp;

OneWire ds1(ONEWIRE_PIN1);
OneWire ds2(ONEWIRE_PIN2);
OneWire ds3(ONEWIRE_PIN3);

class SensorInfo
{
public:
  byte SensorAddress[8] = {};
  float Temperature = 0;
  boolean online = false;
  boolean local = false;
  OneWire *bus;
};


struct PIDSettings {
  int id = 0;
  double pidSetpoint = 0;
  double P = 0;
  double I = 0;
  double D = 0;
  byte SensorAddress[8] = {0,0,0,0,0,0,0,0};
};


class PidController
{
public:
  PIDSettings pidSettings = PIDSettings();
  double pidOutput = 0;
  double pidInput = 0;
//  String Name = "";
  int Pin;
  PID Controller = PID(&pidInput, &pidOutput, &pidSettings.pidSetpoint, 0, 0, 0, DIRECT);
};

LinkedList<PidController*> Pids = LinkedList<PidController*>();

void loadPid(int id,int pin){

  pinMode(pin, OUTPUT); 
  
  PidController *pid = new PidController();
  EEPROM_readGeneric(500 + (id * sizeof(PIDSettings)), pid->pidSettings);
  pid->pidSettings.id = id; //Set id each time so if eeprom return corruped data it always make sense
  
  Pids.add(pid);
  pid->Pin = pin;
  pid->Controller.SetOutputLimits(0, 255);
  //turn the PID on
  pid->Controller.SetMode(AUTOMATIC);
}

// packet types
typedef enum packetType { 
  TYPE_SENDERROR = 0x5,
  TYPE_1WIRE = 0x10,
  TYPE_PID_INFO = 0x11,
  TYPE_PB_TEMP_INFO = 0x20,
  // server to node
  TYPE_PID_SET_ADDRESS = 0xF0,
  TYPE_PID_SET_SETPOINT = 0xF1,
  TYPE_PID_SET_TUNINGS = 0xF2,
  TYPE_SET_COMPRESSOR_SETTINGS = 0x70
};
void dumpType(byte type)
{
  if (type == TYPE_SENDERROR)
    DBG_OUTPUT_PORT.print( "SENDERROR");
  else if (type == TYPE_1WIRE)
    DBG_OUTPUT_PORT.print( "1WIRE");
  else if (type == TYPE_PID_INFO)
    DBG_OUTPUT_PORT.print( "PID_INFO");
  else if (type == TYPE_PID_SET_ADDRESS)
    DBG_OUTPUT_PORT.print( "PID_SET_ADDRESS");
  else if (type == TYPE_PID_SET_SETPOINT)
    DBG_OUTPUT_PORT.print( "PID_SET_SETPOINT");
  else if (type == TYPE_PID_SET_TUNINGS)
    DBG_OUTPUT_PORT.print( "PID_SET_TUNINGS");
  else if (type == TYPE_SET_COMPRESSOR_SETTINGS)
    DBG_OUTPUT_PORT.print( "TYPE_SET_COMPRESSOR_SETTINGS");
  else if (type == TYPE_PB_TEMP_INFO)
    DBG_OUTPUT_PORT.print("TYPE_PB_TEMP_INFO");
    
  else
    DBG_OUTPUT_PORT.print(type);
}




LinkedList<SensorInfo*> sensors = LinkedList<SensorInfo*>();
//Update temp to static variables and pids
void updateTemp(byte address[8], float curTemp)
{
  if (ByteArrayCompare(config.temp_main_sensor, address, 8))
  {
    temp_main = curTemp;
  }
  else if (ByteArrayCompare(config.temp_backup_sensor, address, 8))
  {
    temp_backup = curTemp;
  }

  for (int i = 0; i < Pids.size(); i++)
  {
    PidController *pid;  
    pid = Pids.get(i);
    
    if (ByteArrayCompare(pid->pidSettings.SensorAddress, address, 8))
    {
      pid->pidInput = curTemp;
    }
  }
  
}


void updateSensorInfo(OneWire *ds, byte address[8], float curTemp, boolean local)
{
  //update temp to static values
  updateTemp(address, curTemp);
  hexPrintArray(address,8);
  DBG_OUTPUT_PORT.print("\t");
  DBG_OUTPUT_PORT.println(curTemp);
  
  SensorInfo *sensor;
  for (int i = 0; i < sensors.size(); i++)
  {
    sensor = sensors.get(i);
    if (ByteArrayCompare(sensor->SensorAddress, address, 8))
    {
      sensor->online = true;
      sensor->local = local;
      sensor->Temperature = curTemp;
      sensor->bus = ds;
      return;
    }
  }

  SensorInfo *newsensor = new SensorInfo();
  copyByteArray(address, newsensor->SensorAddress, 8);
  newsensor->online = true;
  newsensor->local = local;
  newsensor->bus = ds;
  newsensor->Temperature = curTemp;
  sensors.add(newsensor);
  //DBG_OUTPUT_PORT.println("");
  DBG_OUTPUT_PORT.println(F("Sensor added"));
}



// Allow remote nodes to send temperature values. 
void netRecvProtoBuffTempInfo(byte packetBuffer[], int packetSize )
{
  TempInfo message;
  pb_istream_t stream = pb_istream_from_buffer(packetBuffer, packetSize);
  bool status = pb_decode(&stream, TempInfo_fields, &message);
  if (!status)
  {
    DBG_OUTPUT_PORT.print(F("PB Message decoding failed: "));
    DBG_OUTPUT_PORT.println(PB_GET_ERROR(&stream));
  } 
  else
  {
     
    if (message.SensorAddr.size == 8)
    {
      updateSensorInfo(nullptr, message.SensorAddr.bytes,message.Temp, false);
    }
  }
}

void copyByteArrayToCharArray(byte in[], char out[],int len){
  for(int i=0;i<len;i++){
    out[i] = in[i];
  }
  
}
void netRecvJsonTempInfo(byte packetBuffer[], int packetSize )
{
  if (packetSize > 200)
  {
    return;
  }
  char json[200] = {};
  copyByteArrayToCharArray(packetBuffer,json,packetSize);
  
  StaticJsonBuffer<200> jsonBuffer;
  JsonObject& root = jsonBuffer.parseObject(json);

  // Test if parsing succeeds.
  if (!root.success()) {
    Serial.println(F("parseObject() failed"));
    return;
  }
  
  if (root.containsKey("tempinfo"))
  {
      JsonObject& sensorinfo = root["data"];
      if (!sensorinfo.containsKey("address") ||sensorinfo.containsKey("temp"))
      {
        Serial.println(F("Broken json temp info"));
        return;
      }
      byte sensoraddr[8] = {};
      const char* sensor = sensorinfo["address"];
      for(int i = 0;i<8;i++){
        sensoraddr[i] = sensor[i];
      }
      float temp = sensorinfo["temp"];
      
      updateSensorInfo(nullptr, sensoraddr,temp, false);
  }
  else 
  {
    Serial.println(F("Unknown json info"));
    return;
  }

}


bool readPbNetwork()
{
  //Process ethernet
  int packetSize =  pbufUdp.parsePacket();
  if(packetSize)
  {
    int messagetype =  pbufUdp.read();
    //DBG_OUTPUT_PORT.print(" messagetype: ");   
    //dumpType(messagetype);
    DBG_OUTPUT_PORT.println();
    
    byte packetBuffer[UDP_TX_PACKET_MAX_SIZE - 1];
    pbufUdp.read(packetBuffer,UDP_TX_PACKET_MAX_SIZE - 1);
    
    yield();
    // parse messages by type
    if (messagetype == TYPE_SET_COMPRESSOR_SETTINGS)
    {
      //netRecvCompressorSettings(packetBuffer, (packetSize -1));
    } 
    else if (messagetype == TYPE_PB_TEMP_INFO)
    {
      DBG_OUTPUT_PORT.print("Temp from ");
      IPAddress remote =  pbufUdp.remoteIP();
      for (int i =0; i < 4; i++)
      {
        DBG_OUTPUT_PORT.print(remote[i], DEC);
        if (i < 3)
        {
          DBG_OUTPUT_PORT.print(".");
        }
      }
     DBG_OUTPUT_PORT.print(" ");
      netRecvProtoBuffTempInfo(packetBuffer, (packetSize -1));
    }
    return true;
  } 
  else 
    return false;


}
/*
bool readJsonNetwork()
{
  //Process ethernet
  int packetSize =  jsonUdp.parsePacket();
  if(packetSize)
  {
    byte packetBuffer[UDP_TX_PACKET_MAX_SIZE - 1];
    jsonUdp.read(packetBuffer,UDP_TX_PACKET_MAX_SIZE - 1);
    yield();
    netRecvJsonTempInfo(packetBuffer, packetSize);
    return true;
  } 
  else 
    return false;


  
}
*/

void doJob(){
  yield();
  readPbNetwork();
  //readJsonNetwork();
  yield();
}

void pollSleep(int time)
{
  time = time / 10;
  for (int i = 0; time > i; i++)
  {
    delay(10);
    doJob();
 //   server.handleClient(); // Some reason this will cause crash.
 //   readNetwork();
  }
}




/// Send Temp info to network with Json
/*
void sendJsonTempInfo(byte address[8], float curTemp)
{
  if (!config.jsonSend)
    return;
  DynamicJsonBuffer jsonBuffer;
  JsonObject& root = jsonBuffer.createObject();
  JsonObject& sensorinfo = root.createNestedObject("tempinfo");
  String sensorAddr;
  getHexString(address, sensorAddr);
  sensorinfo["address"] = sensorAddr;
  sensorinfo["temp"] = curTemp;

  String jsonStringBuffer = "";
  char cbuf[256];
  size_t jsonLenght = root.printTo(cbuf, sizeof(cbuf));

  jsonUdp.beginPacket(mcast, jsonUDP_PORT);
  jsonUdp.write(cbuf, jsonLenght);
  jsonUdp.endPacket();
}
*/
void pbSendTemp(byte addr[], float tempVal)
{     if (!config.pbSend)
        return;
      TempInfo tempinfo = {};
      tempinfo.SensorAddr.size = 8;
      tempinfo.has_SensorAddr = true;
      tempinfo.has_Temp = true;
      
      copyByteArray(addr,tempinfo.SensorAddr.bytes,8);

      tempinfo.Temp = tempVal;
      uint8_t bp_send_buffer[20];
      pb_ostream_t stream = pb_ostream_from_buffer(bp_send_buffer, sizeof(bp_send_buffer));
      bool status = pb_encode(&stream, TempInfo_fields, &tempinfo);
      size_t message_length = stream.bytes_written;
      
      DBG_OUTPUT_PORT.print(" : ");
      DBG_OUTPUT_PORT.println(message_length);

      if (message_length == 0)
      {
        DBG_OUTPUT_PORT.println(F("ERROR IN DBG_OUTPUT_PORTIZER"));
      }
      if (message_length != 15)
      {
        //SendSyslog(4,"Out of memory?");
        DBG_OUTPUT_PORT.println(F("Out of memory?"));
      }
      
      if (!status)
      {
        DBG_OUTPUT_PORT.print(F("Encoding failed: "));
        //SendSyslog(4,"Encoding failed");
        DBG_OUTPUT_PORT.println(PB_GET_ERROR(&stream));
      } 
      else 
      {
          pbufUdp.beginPacket(bcast, pbufUDP_PORT);
          pbufUdp.write(TYPE_PB_TEMP_INFO);
          pbufUdp.write(bp_send_buffer,message_length);
          pbufUdp.endPacket();
      }
}


void readTempSensor(OneWire *ds, byte addr[8], bool needConversion = false)
{
  int i;
  byte present = 0;
  byte data[9];
  float tempVal = 0;
  if (needConversion) // Each temp sensor need internal temp conversion from sensor to scratchpad
  {
    ds->reset();
    doJob();
    ds->select(addr);
    doJob();
    ds->write(0x44);
    pollSleep(750);
  }
  present = ds->reset();
  doJob();
  ds->select(addr); // select sensor
  doJob();
  ds->write(0xBE);         // Read Scratchpad
  doJob();
  
  // read measurement data
  for (i = 0; i < 9; i++) {           // we need 9 bytes
    data[i] = ds->read();
  }
  if (OneWire::crc8(data, 8) != data[8])
  {
    hexPrintArray(addr,8);
    DBG_OUTPUT_PORT.print(" \t");
    DBG_OUTPUT_PORT.println(F(" Data CRC is not valid!"));
    return;
  }
  int HighByte, LowByte, TReading, SignBit, Tc_100, Whole, Fract;
  // print also as human readable mode  
  LowByte = data[0];
  HighByte = data[1];
  TReading = (HighByte << 8) + LowByte;
  SignBit = TReading & 0x8000;  // test most sig bit
  if (SignBit) // negative
  {
    TReading = (TReading ^ 0xffff) + 1; // 2's comp
  }
  Tc_100 = (6 * TReading) + TReading / 4;    // multiply by (100 * 0.0625) or 6.25
  Whole = Tc_100 / 100;  // separate off the whole and fractional portions
  Fract = Tc_100 % 100;
  tempVal = (float)Whole;
  tempVal += ((float)Fract) / 100.0;
  if (SignBit) // If its negative
  {
    tempVal = 0 - tempVal;
  }
  doJob();
  //DBG_OUTPUT_PORT.print(tempVal);
  if (tempVal != 85.00 && tempVal != -85)
  {
    
//    updateTemp(addr, tempVal);
    //DBG_OUTPUT_PORT.println("");
    updateSensorInfo(ds, addr, tempVal, true);
//    sendJsonTempInfo(addr,tempVal);
    pbSendTemp(addr,tempVal);
  } 
  else 
  {
    DBG_OUTPUT_PORT.print(F("Temp from localhost \t"));
    hexPrintArray(addr,8);
    DBG_OUTPUT_PORT.print(" \t");
    DBG_OUTPUT_PORT.println(F("Temp ERR -85"));
  }
}

// remove one offline sensor at each iteration
void cleanOfflineSensors(OneWire *ds)
{
  SensorInfo *sensor;
  for (int i = 0; i < sensors.size(); i++)
  {
    sensor = sensors.get(i);
    if (!sensor->online && sensor->local && sensor->bus == ds)
    {
      DBG_OUTPUT_PORT.println(F("Sensor removed"));
      sensors.remove(i);
      //clean more than just first
      cleanOfflineSensors(ds);
      return;
    }
  }
}

void markSensorsToOffline(OneWire *ds)
{
  SensorInfo *sensor;
  for (int i = 0; i < sensors.size(); i++)
  {
    sensor = sensors.get(i);
    if (sensor->local == true && sensor->bus == ds)
      sensor->online = false;
  }
}


void searchAllTempSensors(OneWire *ds)
{
  int count = 0;
  doJob();
  ds->reset_search();
  markSensorsToOffline(ds);
  byte addr[8];
  while (ds->search(addr)) {
    // debug print sensor address
    DBG_OUTPUT_PORT.print(F("Found "));
    hexPrintArray(addr,8);
    DBG_OUTPUT_PORT.println("");
    if (OneWire::crc8(addr, 7) == addr[7]) {
      if (addr[0] == 0x10) {
        //#DBG_OUTPUT_PORT.print("Device is a DS18S20 family device.\n");
        count++;
        readTempSensor(ds,addr, true);
      }
      else if (addr[0] == 0x28) {
        count++;
        //#DBG_OUTPUT_PORT.print("Device is a DS18B20 family device.\n");
        readTempSensor(ds,addr, true);
      }
      else {
        DBG_OUTPUT_PORT.print(F("Device family is not recognized: 0x"));
        DBG_OUTPUT_PORT.println(addr[0], HEX);
      }
    } 
    else 
    {
      DBG_OUTPUT_PORT.println(F(" Address CRC is not valid!"));
    }
  }
  // clean unfound sensors
  cleanOfflineSensors(ds);
  DBG_OUTPUT_PORT.print("All ");
  DBG_OUTPUT_PORT.print(count);
  DBG_OUTPUT_PORT.println(F(" sensors found"));
}

//#define 1WIRE_WAIT 1
//#define 1WIRE_CONTINUE 1

void prepareReadAllSensors(OneWire *ds)
{
    ds->reset();
    doJob();
    ds->skip();
    doJob();
    ds->write(0x44);  
}
void completeReadAllTempSensors(OneWire *ds)
{
    SensorInfo *sensor;
    for (int i = 0; i < sensors.size(); i++)
    {
      sensor = sensors.get(i);
      if(sensor->local && sensor->bus == ds)
        readTempSensor(ds, sensor->SensorAddress);
    }
    doJob();
}

void doFullTempSensorRead()
{
    prepareReadAllSensors(&ds1);
    prepareReadAllSensors(&ds2);
    prepareReadAllSensors(&ds3);
    pollSleep(750);
    completeReadAllTempSensors(&ds1);
    completeReadAllTempSensors(&ds2);
    completeReadAllTempSensors(&ds3);
}

void initScada()
{
  pinMode(COMPRESSOR_PIN, OUTPUT); 
  pinMode(GROUNDPUMP_PIN, OUTPUT); 
  pinMode(GROUNDTANK_PIN, OUTPUT); 

  //jsonUdp.begin(jsonUDP_PORT);
  pbufUdp.begin(pbufUDP_PORT);
  searchAllTempSensors(&ds1);
  searchAllTempSensors(&ds2);
  searchAllTempSensors(&ds3);
  
  loadPid(0, PIN_SHUNT_OFFICE);
  loadPid(1, PIN_SHUNT_VERANDA);
  
  
}
bool startByBackup = false;

unsigned long nexttempread = 0;
void handleScada()
{
  
  if (nexttempread < millis())
  {
    doFullTempSensorRead();
    nexttempread = millis() + 5000;
  }
  
  
  while (readPbNetwork()){}
  //while (readJsonNetwork()){}
  
  
  if(temp_main > config.temp_start_main && config.AutoTurnOn && !compressorPowerOn)
  {
    DBG_OUTPUT_PORT.println(F("Relay on by main sensor"));
    compressorPowerOn  = true;
  }
  else if(temp_backup > config.temp_start_backup && config.AutoTurnOn && !compressorPowerOn)
  {
    DBG_OUTPUT_PORT.println(F("Relay on by backup sensor"));
    startByBackup = true;
    compressorPowerOn  = true;
  } 
  else if(!startByBackup && temp_main < config.temp_stop_main && config.AutoTurnOff && compressorPowerOn)
  {
    DBG_OUTPUT_PORT.println(F("Relay off by main sensor"));
    compressorPowerOn  = false;
  }
  else if(startByBackup && temp_backup < config.temp_stop_backup && config.AutoTurnOff && compressorPowerOn)
  {
    DBG_OUTPUT_PORT.println(F("Relay off by backup sensor"));
    startByBackup = false;
    compressorPowerOn  = false;
  }
  if (compressorPowerOn)
    digitalWrite(COMPRESSOR_PIN, HIGH);
  else 
    digitalWrite(COMPRESSOR_PIN, LOW);

  if (groundPumpPowerOn)
    digitalWrite(GROUNDPUMP_PIN, HIGH);
  else 
    digitalWrite(GROUNDPUMP_PIN, LOW);

  if (groundTankOn)
    digitalWrite(GROUNDTANK_PIN, HIGH);
  else 
    digitalWrite(GROUNDTANK_PIN, LOW);

  for (int i = 0; i < Pids.size(); i++)
  {
    PidController *pid;  
    pid = Pids.get(i);
    pid->Controller.Compute();
    analogWrite(pid->Pin, pid->pidOutput);
  }
}


